@@ -3,6 +3,7 @@ Change log next version
 * Added var-args to mockStatic in the PowerMockito API. You can now do: 
   mockStatic(A.class, B.class, C.class);
 * Suppression is now working for overridden methods (issue  364, 51). Thanks to  hpbeem for the patch.
+* PowerMock junit module now supports JUnit rules for version 4.9+ (issue 344). Thanks to Andreas Kutschera for the patch.
 
 Change log 1.4.12 (2012-04-05)
 ------------------------------
